# idfsb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arduino_submodule.sh  sdkconfig
flash_data/: file.txt
main/: CMakeLists.txt  app_main.cpp  app_main.h  firmware  idf_component.yml  ticker
main/arduino/: Arduino.h  analog.h  digital.h  esp.h  fastled.h  idfsb_lfs.h  ledc.h  random.h  serial.cpp  serial.h  timer.h  wifi.h  yield.h
main/overrides/: ESP32_fft.cpp  ESP32_fft.h  constants.h  globals.h  i2s.h  p2p.h  system.h
